control-symbol-cartouche form, with an embedded argument:
\<^cite>\<open>arg\<close>. The embedded argument syntax supports both the optional
and mandatory argument of the underlying \cite-like macro.

Examples:

  \<^cite>\<open>\<open>\S1.2\<close> in "isabelle-system"\<close>
  \<^cite>\<open>"isabelle-system" and "isabelle-jedit"\<close>
  \<^nocite>\<open>"isabelle-isar-ref"\<close>

The command-line tool "isabelle update -u cite" helps to update former
uses of LaTeX \cite commands and old-style @{cite "name"} document
antiquotations.


*** HOL ***

* Theory "HOL.Fun":
  - Renamed lemma inj_on_strict_subset to image_strict_mono.
    Minor INCOMPATIBILITY.

* Theory "HOL.Relation":
  - Added predicates irrefl_on and irreflp_on and redefined irrefl and
    irreflp to be abbreviations. Lemmas irrefl_def and irreflp_def are
    explicitly provided for backward compatibility but their usage is
    discouraged. Minor INCOMPATIBILITY.
  - Added predicates sym_on and symp_on and redefined sym and
    symp to be abbreviations. Lemmas sym_def and symp_def are explicitly
    provided for backward compatibility but their usage is discouraged.
    Minor INCOMPATIBILITY.
  - Added predicates asym_on and asymp_on and redefined asym and
    asymp to be abbreviations. INCOMPATIBILITY.
  - Added predicates antisym_on and antisymp_on and redefined antisym and
    antisymp to be abbreviations. Lemmas antisym_def and antisymp_def are
    explicitly provided for backward compatibility but their usage is
    discouraged. Minor INCOMPATIBILITY.
  - Added predicates trans_on and transp_on and redefined trans and transp to
    be abbreviations. Lemmas trans_def and transp_def are explicitly provided
    for backward compatibility but their usage is discouraged.
    Minor INCOMPATIBILITY.
  - Strengthened (and renamed) lemmas. Minor INCOMPATIBILITY.
      antisym_converse[simp] ~> antisym_on_converse[simp]
      order.antisymp_ge[simp] ~> order.antisymp_on_ge[simp]